Page de contact front

--- a/data/locales/fr_FR.csv
+++ b/data/locales/fr_FR.csv
@@ -33,10 +33,11 @@ GLOBAL_FORM_SUBMIT;Enregistrer
 GLOBAL_FORM_SUBMIT_QUIT;Enregistrer & quitter
 GLOBAL_COORDONNEES_ADRESSE;Adresse : 28, avenue de Gascogne - 31 110 Saint Mamet
 GLOBAL_COORDONNEES_TELEPHONE_LABEL;Tél.
-GLOBAL_COORDONNEES_TELEPHONE;05 61 89 13 53
+GLOBAL_COORDONNEES_TELEPHONE;+33(0) 561 891 353
 GLOBAL_COORDONNEES_MOBILE_LABEL;Mob.
-GLOBAL_COORDONNEES_MOBILE;06 18 64 14 29
+GLOBAL_COORDONNEES_MOBILE;+33(0) 618 641 429
 GLOBAL_BACK;Retour
+GLOBAL_CHAMP_OBLIGATOIRE;*
 
 ; Footer
 FOOTER_COPYRIGHT;Tous droits reservés© 2008
@@ -126,6 +127,37 @@ ACTIVITY_EDIT_LINK_LABEL;Lien
 ACTIVITY_EDIT_LOCATION_LABEL;Coordonnées GPS
 ACTIVITY_ELEMENT_ILLUSTRATION;Galerie photo
 ACTIVITY_LIST_NORESULT;Il n'y a aucune activité
+
+;Contact
+CONTACT_TITLE;Réserver / Nous contacter
+HEAD_TITLE_CONTACT;Réservation / Contact
+CONTACT_MAP_TITLE;Nous localiser
+CONTACT_FORM_FIELDSET_INFORMATIONS;À propos de vous
+CONTACT_FORM_LABEL_NOM;Nom
+CONTACT_FORM_LABEL_PRENOM;Prénom
+CONTACT_FORM_LABEL_EMAIL;E-mail
+CONTACT_FORM_LABEL_TELEPHONE;Tél./Mob.
+CONTACT_FORM_LABEL_ADRESSE;Adresse complète
+CONTACT_FORM_FIELDSET_DEMANDE;À propos de votre demande
+CONTACT_FORM_LABEL_DECOUVERTE;Comment nous avez vous découvert ?
+CONTACT_FORM_SELECT_DECOUVERTE_OPTION_VIDE; ---
+CONTACT_FORM_SELECT_DECOUVERTE_OPTION_SE;Moteur de recherche
+CONTACT_FORM_SELECT_DECOUVERTE_OPTION_ABRITEL;Abritel
+CONTACT_FORM_SELECT_DECOUVERTE_OPTION_BOUCHEOREILLE;Bouche à oreille
+CONTACT_FORM_SELECT_DECOUVERTE_OPTION_AUTRES;Autrement
+CONTACT_FORM_LABEL_ADULTES;Nombre d'adultes
+CONTACT_FORM_LABEL_ENFANTS;Nombre d'enfants
+CONTACT_FORM_LABEL_ARRIVEE;Date arrivée souhaitée
+CONTACT_FORM_LABEL_DEPART;Date départ souhaitée
+CONTACT_FORM_LABEL_LOCATIONS;Location(s) souhaitée(s)
+CONTACT_FORM_LABEL_PRECISIONS;Souhaitez vous apporter des précisions ?
+CONTACT_ENVOI_MAIL_MESSAGE_SUCCES;Votre message nous a bien été envoyé. Nous y répondrons dans les meilleurs délais.
+CONTACT_ENVOI_MAIL_MESSAGE_OBLIGATOIRE;Tous les champs marqués d'un * sont obligatoires.
+CONTACT_FORM_SUBMIT;Faire une demande de réservation
+CONTACT_ENVOI_MAIL_MAIL;aroybase@hotmail.fr
+CONTACT_ENVOI_MAIL_SUJET;[Gite-luchon.com] Nouvelle demande de réservation
+CONTACT_ENVOI_MAIL_ALT;Pour afficher ce message, vous devez utiliser un client compatible HTML
+
 
 
 ;•••••••••••• ADMINISTRATION ••••••••••••;inutile de traduire
