--- a/data/locales/fr_FR/LC_MESSAGES/application.po
+++ b/data/locales/fr_FR/LC_MESSAGES/application.po
@@ -1,439 +1,381 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: \n"
-"POT-Creation-Date: \n"
-"PO-Revision-Date: \n"
-"Last-Translator: Alec <aroybase@hotmail.fr>\n"
-"Language-Team: \n"
-"MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=iso-8859-1\n"
-"Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.5.4\n"
-
+"Content-Type: text/plain; charset=UTF-8"
+msgid ""
+msgstr " Erreurs"
 msgid "ERROR_EXCEPTION_SITE_UNKNOWN"
 msgstr "Le site que vous essayez d'atteindre n'existe pas."
-
 msgid "ERROR_EXCEPTION_INVALIDARGUMENT"
 msgstr "ERREUR TECHNIQUE : L'entity n'est pas correcte"
-
 msgid "ERROR_EXCEPTION_INVALIDARGUMENT_DAL_ROW_PROPERTYNAME"
-msgstr "La propriÈtÈ demandÈe n'existe pas"
-
+msgstr "La propri√©t√© demand√©e n'existe pas"
 msgid "ERROR_DB_CONNECTION"
-msgstr "Erreur lors de la connexion ‡ la base de donnÈes"
-
+msgstr "Erreur lors de la connexion √† la base de donn√©es"
+msgid ""
+msgstr " Head"
 msgid "HEAD_TITLE_HOME"
 msgstr "Accueil"
-
 msgid "HEAD_TITLE_PARTNERS"
 msgstr "Partenaires"
-
 msgid "HEAD_TITLE_CONNECTION"
 msgstr "Connexion"
-
+msgid "HEAD_TITLE_NEWS"
+msgstr "Actualit√©s"
+msgid "HEAD_TITLE_ACTIVITY"
+msgstr "Activit√©s"
+msgid "HEAD_TITLE_ERROR"
+msgstr "ERREUR"
+msgid ""
+msgstr " Menu"
 msgid "GLOBAL_MENU_HOME"
 msgstr "Accueil"
-
 msgid "GLOBAL_MENU_CHAMBRES"
-msgstr "Chambres d'hÙtes"
-
+msgstr "Chambres d'h√¥tes"
 msgid "GLOBAL_MENU_GITE"
 msgstr "Chalet de montagne"
-
 msgid "GLOBAL_MENU_NEWS"
-msgstr "ActualitÈs"
-
+msgstr "Actualit√©s"
 msgid "GLOBAL_MENU_ACTIVITIES"
-msgstr "ActivitÈs"
-
+msgstr "Activit√©s"
 msgid "GLOBAL_MENU_CONTACT"
 msgstr "Reservations"
-
 msgid "GLOBAL_MENU_PARTNERS"
 msgstr "Partenaires"
-
+msgid ""
+msgstr " Global"
 msgid "GLOBAL_HEADER_TITLE"
 msgstr "Luchon Location Vacances"
-
 msgid "GLOBAL_OUI"
 msgstr "Oui"
-
 msgid "GLOBAL_NON"
 msgstr "Non"
-
 msgid "GLOBAL_AUCUNE"
 msgstr "Aucune"
-
 msgid "GLOBAL_FORM_ENVOYER"
 msgstr "Envoyer"
-
 msgid "GLOBAL_FORM_CONFIRMER"
 msgstr "Confirmer"
-
 msgid "GLOBAL_FORM_VALIDER"
 msgstr "Valider"
-
 msgid "GLOBAL_FORM_SUBMIT"
 msgstr "Enregistrer"
-
 msgid "GLOBAL_FORM_SUBMIT_QUIT"
 msgstr "Enregistrer & quitter"
-
 msgid "GLOBAL_COORDONNEES_ADRESSE"
 msgstr "Adresse : 28, avenue de Gascogne - 31 110 Saint Mamet"
-
 msgid "GLOBAL_COORDONNEES_TELEPHONE_LABEL"
-msgstr "TÈl."
-
+msgstr "T√©l."
 msgid "GLOBAL_COORDONNEES_TELEPHONE"
-msgstr "05 61 89 13 53"
-
+msgstr "+33(0) 561 891 353"
 msgid "GLOBAL_COORDONNEES_MOBILE_LABEL"
 msgstr "Mob."
-
 msgid "GLOBAL_COORDONNEES_MOBILE"
-msgstr "06 18 64 14 29"
-
+msgstr "+33(0) 618 641 429"
 msgid "GLOBAL_BACK"
 msgstr "Retour"
-
+msgid "GLOBAL_CHAMP_OBLIGATOIRE"
+msgstr "*"
+msgid ""
+msgstr " Footer"
 msgid "FOOTER_COPYRIGHT"
-msgstr "Tous droits reservÈs© 2008"
-
+msgstr "Tous droits reserv√©s¬© 2008"
 msgid "FOOTER_CREDITS"
-msgstr "RÈalisation : <a href=\"http://www.aroy.fr\">Alexandre ROY</a>"
-
+msgstr "R√©alisation : <a href=\"http://www.aroy.fr\">Alexandre ROY</a>"
+msgid ""
+msgstr " Dates"
 msgid "GLOBAL_MONTH_LABEL01"
 msgstr "Janvier"
-
 msgid "GLOBAL_MONTH_LABEL02"
-msgstr "FÈvrier"
-
+msgstr "F√©vrier"
 msgid "GLOBAL_MONTH_LABEL03"
 msgstr "Mars"
-
 msgid "GLOBAL_MONTH_LABEL04"
 msgstr "Avril"
-
 msgid "GLOBAL_MONTH_LABEL05"
 msgstr "Mai"
-
 msgid "GLOBAL_MONTH_LABEL06"
 msgstr "Juin"
-
 msgid "GLOBAL_MONTH_LABEL07"
 msgstr "Juillet"
-
 msgid "GLOBAL_MONTH_LABEL08"
-msgstr "Ao˚t"
-
+msgstr "Ao√ªt"
 msgid "GLOBAL_MONTH_LABEL09"
 msgstr "Septembre"
-
 msgid "GLOBAL_MONTH_LABEL10"
 msgstr "Octobre"
-
 msgid "GLOBAL_MONTH_LABEL11"
 msgstr "Novembre"
-
 msgid "GLOBAL_MONTH_LABEL12"
-msgstr "DÈcembre"
-
+msgstr "D√©cembre"
 msgid "GLOBAL_MONTH_LABEL_SHORT01"
 msgstr "Jan"
-
 msgid "GLOBAL_MONTH_LABEL_SHORT02"
-msgstr "FÈv"
-
+msgstr "F√©v"
 msgid "GLOBAL_MONTH_LABEL_SHORT03"
 msgstr "Mars"
-
 msgid "GLOBAL_MONTH_LABEL_SHORT04"
 msgstr "Avr"
-
 msgid "GLOBAL_MONTH_LABEL_SHORT05"
 msgstr "Mai"
-
 msgid "GLOBAL_MONTH_LABEL_SHORT06"
 msgstr "Juin"
-
 msgid "GLOBAL_MONTH_LABEL_SHORT07"
 msgstr "Juil"
-
 msgid "GLOBAL_MONTH_LABEL_SHORT08"
-msgstr "Ao˚t"
-
+msgstr "Ao√ªt"
 msgid "GLOBAL_MONTH_LABEL_SHORT09"
 msgstr "Sept"
-
 msgid "GLOBAL_MONTH_LABEL_SHORT10"
 msgstr "Oct"
-
 msgid "GLOBAL_MONTH_LABEL_SHORT11"
 msgstr "Nov"
-
 msgid "GLOBAL_MONTH_LABEL_SHORT12"
-msgstr "DÈc"
-
+msgstr "D√©c"
 msgid "GLOBAL_DAY_LABEL0"
 msgstr "Dimanche"
-
 msgid "GLOBAL_DAY_LABEL1"
 msgstr "Lundi"
-
 msgid "GLOBAL_DAY_LABEL2"
 msgstr "Mardi"
-
 msgid "GLOBAL_DAY_LABEL3"
 msgstr "Mercredi"
-
 msgid "GLOBAL_DAY_LABEL4"
 msgstr "Jeudi"
-
 msgid "GLOBAL_DAY_LABEL5"
 msgstr "Vendredi"
-
 msgid "GLOBAL_DAY_LABEL6"
 msgstr "Samedi"
-
 msgid "GLOBAL_DAY_LABEL_SHORT0"
 msgstr "Di"
-
 msgid "GLOBAL_DAY_LABEL_SHORT1"
 msgstr "Lu"
-
 msgid "GLOBAL_DAY_LABEL_SHORT2"
 msgstr "Ma"
-
 msgid "GLOBAL_DAY_LABEL_SHORT3"
 msgstr "Me"
-
 msgid "GLOBAL_DAY_LABEL_SHORT4"
 msgstr "Je"
-
 msgid "GLOBAL_DAY_LABEL_SHORT5"
 msgstr "Ve"
-
 msgid "GLOBAL_DAY_LABEL_SHORT6"
 msgstr "Sa"
-
 msgid "GLOBAL_DATEPICKER_CLOSETEXT"
 msgstr "Terminer"
-
 msgid "GLOBAL_DATEPICKER_PREVIOUS"
-msgstr "PrÈcÈdent"
-
+msgstr "Pr√©c√©dent"
 msgid "GLOBAL_DATEPICKER_NEXT"
 msgstr "Suivant"
-
 msgid "GLOBAL_DATEPICKER_CURRENT"
 msgstr "Aujourd'hui"
-
 msgid "GLOBAL_DATEPICKER_WEEK"
 msgstr "Semaine"
-
 msgid "GLOBAL_DATEPICKER_FORMAT"
 msgstr "dd/mm/yy"
-
 msgid "GLOBAL_DATEPICKER_FIRSTDAY"
 msgstr "1"
-
+msgid ""
+msgstr " Homepage"
 msgid "HOME_NEWS_TITRE"
-msgstr "DerniËres nouvelles"
-
+msgstr "Derni√®res nouvelles"
 msgid "HOME_NEWS_MORE"
-msgstr "Autres actualitÈs"
-
+msgstr "Autres actualit√©s"
 msgid "HOME_ACTIVITY_TITRE"
-msgstr "ActivitÈ au hasard"
-
+msgstr "Activit√© au hasard"
 msgid "HOME_ACTIVITY_MORE"
-msgstr "Autres activitÈs"
-
-msgid "HEAD_TITLE_NEWS"
-msgstr "ActualitÈs"
-
+msgstr "Autres activit√©s"
+msgid ""
+msgstr " News"
 msgid "NEWS_LIST_TITLE"
-msgstr "ActualitÈs"
-
+msgstr "Actualit√©s"
 msgid "NEWS_LIST_TITRE"
 msgstr "Titre"
-
 msgid "NEWS_EDIT_TABS_CONTENT"
 msgstr "Contenus"
-
 msgid "NEWS_EDIT_TABS_PICTURES"
 msgstr "Illustrations"
-
 msgid "NEWS_LIST_CATEGORIE"
-msgstr "CatÈgorie"
-
+msgstr "Cat√©gorie"
 msgid "NEWS_LIST_ONLINE"
 msgstr "En ligne ?"
-
 msgid "NEWS_EDIT_TITLE"
-msgstr "…dition de news"
-
+msgstr "√âdition de news"
 msgid "NEWS_CATEGORY_LABEL"
-msgstr "CatÈgorie"
-
+msgstr "Cat√©gorie"
 msgid "NEWS_EDIT_TITLE_LABEL"
 msgstr "Titre"
-
 msgid "NEWS_EDIT_CONTENT_LABEL"
 msgstr "Contenu"
-
 msgid "NEWS_EDIT_LINK_LABEL"
 msgstr "Lien"
-
 msgid "NEWS_EDIT_LOCATION_LABEL"
-msgstr "CoordonnÈes GPS"
-
+msgstr "Coordonn√©es GPS"
 msgid "NEWS_ELEMENT_ILLUSTRATION"
 msgstr "Galerie photo"
-
-msgid "HEAD_TITLE_ACTIVITY"
-msgstr "ActivitÈs"
-
+msgid "NEWS_LIST_NORESULT"
+msgstr "Il n'y a aucune actualit√©"
+msgid ""
+msgstr " Activit√©s"
 msgid "ACTIVITY_LIST_TITLE"
-msgstr "ActivitÈs"
-
+msgstr "Activit√©s"
 msgid "ACTIVITY_LIST_TITRE"
 msgstr "Titre"
-
 msgid "ACTIVITY_EDIT_TABS_CONTENT"
 msgstr "Contenus"
-
 msgid "ACTIVITY_EDIT_TABS_PICTURES"
 msgstr "Illustrations"
-
 msgid "ACTIVITY_LIST_CATEGORIE"
-msgstr "CatÈgorie"
-
+msgstr "Cat√©gorie"
 msgid "ACTIVITY_LIST_ONLINE"
 msgstr "En ligne ?"
-
 msgid "ACTIVITY_EDIT_TITLE"
-msgstr "…dition de l'activitÈ"
-
+msgstr "√âdition de l'activit√©"
 msgid "ACTIVITY_CATEGORY_LABEL"
-msgstr "CatÈgorie"
-
+msgstr "Cat√©gorie"
 msgid "ACTIVITY_EDIT_TITLE_LABEL"
 msgstr "Titre"
-
 msgid "ACTIVITY_EDIT_CONTENT_LABEL"
 msgstr "Contenu"
-
 msgid "ACTIVITY_EDIT_LINK_LABEL"
 msgstr "Lien"
-
 msgid "ACTIVITY_EDIT_LOCATION_LABEL"
-msgstr "CoordonnÈes GPS"
-
+msgstr "Coordonn√©es GPS"
 msgid "ACTIVITY_ELEMENT_ILLUSTRATION"
 msgstr "Galerie photo"
-
+msgid "ACTIVITY_LIST_NORESULT"
+msgstr "Il n'y a aucune activit√©"
+msgid ""
+msgstr "Contact"
+msgid "CONTACT_TITLE"
+msgstr "R√©server / Nous contacter"
+msgid "HEAD_TITLE_CONTACT"
+msgstr "R√©servation / Contact"
+msgid "CONTACT_MAP_TITLE"
+msgstr "Nous localiser"
+msgid "CONTACT_FORM_FIELDSET_INFORMATIONS"
+msgstr "√Ä propos de vous"
+msgid "CONTACT_FORM_LABEL_NOM"
+msgstr "Nom"
+msgid "CONTACT_FORM_LABEL_PRENOM"
+msgstr "Pr√©nom"
+msgid "CONTACT_FORM_LABEL_EMAIL"
+msgstr "E-mail"
+msgid "CONTACT_FORM_LABEL_TELEPHONE"
+msgstr "T√©l./Mob."
+msgid "CONTACT_FORM_LABEL_ADRESSE"
+msgstr "Adresse compl√®te"
+msgid "CONTACT_FORM_FIELDSET_DEMANDE"
+msgstr "√Ä propos de votre demande"
+msgid "CONTACT_FORM_LABEL_DECOUVERTE"
+msgstr "Comment nous avez vous d√©couvert ?"
+msgid "CONTACT_FORM_SELECT_DECOUVERTE_OPTION_VIDE"
+msgstr " ---"
+msgid "CONTACT_FORM_SELECT_DECOUVERTE_OPTION_SE"
+msgstr "Moteur de recherche"
+msgid "CONTACT_FORM_SELECT_DECOUVERTE_OPTION_ABRITEL"
+msgstr "Abritel"
+msgid "CONTACT_FORM_SELECT_DECOUVERTE_OPTION_BOUCHEOREILLE"
+msgstr "Bouche √† oreille"
+msgid "CONTACT_FORM_SELECT_DECOUVERTE_OPTION_AUTRES"
+msgstr "Autrement"
+msgid "CONTACT_FORM_LABEL_ADULTES"
+msgstr "Nombre d'adultes"
+msgid "CONTACT_FORM_LABEL_ENFANTS"
+msgstr "Nombre d'enfants"
+msgid "CONTACT_FORM_LABEL_ARRIVEE"
+msgstr "Date arriv√©e souhait√©e"
+msgid "CONTACT_FORM_LABEL_DEPART"
+msgstr "Date d√©part souhait√©e"
+msgid "CONTACT_FORM_LABEL_LOCATIONS"
+msgstr "Location(s) souhait√©e(s)"
+msgid "CONTACT_FORM_LABEL_PRECISIONS"
+msgstr "Souhaitez vous apporter des pr√©cisions ?"
+msgid "CONTACT_ENVOI_MAIL_MESSAGE_SUCCES"
+msgstr "Votre message nous a bien √©t√© envoy√©. Nous y r√©pondrons dans les meilleurs d√©lais."
+msgid "CONTACT_ENVOI_MAIL_MESSAGE_OBLIGATOIRE"
+msgstr "Tous les champs marqu√©s d'un * sont obligatoires."
+msgid "CONTACT_FORM_SUBMIT"
+msgstr "Faire une demande de r√©servation"
+msgid "CONTACT_ENVOI_MAIL_MAIL"
+msgstr "aroybase@hotmail.fr"
+msgid "CONTACT_ENVOI_MAIL_SUJET"
+msgstr "[Gite-luchon.com] Nouvelle demande de r√©servation"
+msgid "CONTACT_ENVOI_MAIL_ALT"
+msgstr "Pour afficher ce message, vous devez utiliser un client compatible HTML"
+msgid ""
+msgstr "‚Ä¢‚Ä¢‚Ä¢‚Ä¢‚Ä¢‚Ä¢‚Ä¢‚Ä¢‚Ä¢‚Ä¢‚Ä¢‚Ä¢ ADMINISTRATION ‚Ä¢‚Ä¢‚Ä¢‚Ä¢‚Ä¢‚Ä¢‚Ä¢‚Ä¢‚Ä¢‚Ä¢‚Ä¢‚Ä¢"
+msgid ""
+msgstr " Global Admin"
 msgid "GLOBAL_ADMIN_ADD"
-msgstr "Ajouter un ÈlÈment"
-
+msgstr "Ajouter un √©l√©ment"
 msgid "GLOBAL_ADMIN_UPDATE"
-msgstr "Modifier un ÈlÈment"
-
+msgstr "Modifier un √©l√©ment"
 msgid "GLOBAL_ADMIN_DELETE"
-msgstr "Supprimer un ÈlÈment"
-
+msgstr "Supprimer un √©l√©ment"
 msgid "GLOBAL_ADMIN_DELETE_CONFIRM"
-msgstr " tes-vous s˚r de vouloir supprimer cet ÈlÈment ?"
-
+msgstr "√ätes-vous s√ªr de vouloir supprimer cet √©l√©ment ?"
 msgid "GLOBAL_ADMIN_UP"
-msgstr "Remonter l'ÈlÈment"
-
+msgstr "Remonter l'√©l√©ment"
 msgid "GLOBAL_ADMIN_DOWN"
-msgstr "Descendre l'ÈlÈment"
-
+msgstr "Descendre l'√©l√©ment"
 msgid "GLOBAL_ADMIN_ONLINE"
 msgstr "Mettre en ligne"
-
 msgid "GLOBAL_ADMIN_OFFLINE"
 msgstr "Mettre hors ligne"
-
 msgid "GLOBAL_ADMIN_LIST_APERCU"
-msgstr "AperÁu"
-
+msgstr "Aper√ßu"
 msgid "GLOBAL_ADMIN_LIST_DATE_AJOUT"
-msgstr "AjoutÈ le"
-
+msgstr "Ajout√© le"
 msgid "GLOBAL_ADMIN_LIST_DATE_MODIFICATION"
-msgstr "ModifiÈ le"
-
+msgstr "Modifi√© le"
 msgid "GLOBAL_ADMIN_LIST_DATE_SUPPRESSION"
-msgstr "SupprimÈ le"
-
+msgstr "Supprim√© le"
 msgid "GLOBAL_ADMIN_LIST_ACTIONS"
 msgstr "Actions"
-
 msgid "GLOBAL_LANGUAGETOGGLER_LABEL"
-msgstr "Changer la langue d'Èdition"
-
+msgstr "Changer la langue d'√©dition"
 msgid "GLOBAL_MODAL_DELETE_TEXT"
-msgstr ""
-"Vous Ítes sur le point de supprimer un ÈlÈment. Confirmez vous cette "
-"suppression ?"
-
+msgstr "Vous √™tes sur le point de supprimer un √©l√©ment. Confirmez vous cette suppression ?"
 msgid "GLOBAL_MODAL_DELETE_CONFIRM"
 msgstr "Confirmer"
-
 msgid "GLOBAL_MODAL_DELETE_CANCEL"
 msgstr "Annuler"
-
+msgid ""
+msgstr " Menu Admin"
 msgid "GLOBAL_MENU_CARROUSEL"
 msgstr "Carrousel"
-
 msgid "HEAD_TITLE_CARROUSEL"
 msgstr "Carrousel"
-
 msgid "GLOBAL_MENU_DECONNEXION"
-msgstr "Se dÈconnecter"
-
+msgstr "Se d√©connecter"
+msgid ""
+msgstr " Homepage Admin"
 msgid "HOME_LOGIN_TITLE"
-msgstr "Connexion ‡ l'interface d'administration"
-
+msgstr "Connexion √† l'interface d'administration"
 msgid "HOME_LOGIN_FORM_LOGIN_LABEL"
 msgstr "Identifiant"
-
 msgid "HOME_LOGIN_FORM_PASSWORD_LABEL"
 msgstr "Mot de passe"
-
 msgid "HOME_LOGIN_FORM_SUBMIT_LABEL"
 msgstr "Se connecter"
-
 msgid "HOME_PAGECMS_HOME_TITLE"
-msgstr "…dition de la page d'accueil"
-
+msgstr "√âdition de la page d'accueil"
 msgid "HOME_PAGECMS_PARTNERS_TITLE"
-msgstr "…dition de la page partenaires"
-
+msgstr "√âdition de la page partenaires"
 msgid "HOME_PAGECMS_EDIT_TITLE_LABEL"
 msgstr "Titre"
-
 msgid "HOME_PAGECMS_EDIT_CONTENT_LABEL"
 msgstr "Contenu"
-
+msgid ""
+msgstr " Carrousel Admin"
 msgid "HOME_CARROUSEL_TITLE"
-msgstr "…dition des images du carrousel"
-
+msgstr "√âdition des images du carrousel"
 msgid "HOME_CARROUSEL_FILE_LABEL"
 msgstr "Nouveau fichier"
-
 msgid "HOME_CARROUSEL_LIST_ID"
 msgstr "#"
-
 msgid "HOME_CARROUSEL_LIST_ORIGINALFILENAME"
 msgstr "Nom du fichier"
-
 msgid "HOME_CARROUSEL_LIST_TYPE"
 msgstr "Type"
-
 msgid "HOME_CARROUSEL_LIST_ONLINE"
 msgstr "En ligne ?"
