--- a/data/locales/fr_FR/LC_MESSAGES/application.po
+++ b/data/locales/fr_FR/LC_MESSAGES/application.po
@@ -11,6 +11,10 @@ msgid "ERROR_EXCEPTION_INVALIDARGUMENT_DAL_ROW_PROPERTYNAME"
 msgstr "La propriété demandée n'existe pas"
 msgid "ERROR_DB_CONNECTION"
 msgstr "Erreur lors de la connexion à la base de données"
+msgid "ERROR_404_TITLE"
+msgstr "Oops !"
+msgid "ERROR_404_CONTENT"
+msgstr "Oops ! La page souhaitée n'existe pas =/"
 msgid ""
 msgstr " Head"
 msgid "HEAD_TITLE_HOME"
@@ -72,7 +76,9 @@ msgstr "Mob."
 msgid "GLOBAL_COORDONNEES_MOBILE"
 msgstr "+33(0) 618 641 429"
 msgid "GLOBAL_BACK"
-msgstr "Retour"
+msgstr "Retourner à la liste"
+msgid "GLOBAL_BACK_HOME"
+msgstr "Retourner à l'accueil"
 msgid "GLOBAL_CHAMP_OBLIGATOIRE"
 msgstr "*"
 msgid ""
@@ -178,11 +184,15 @@ msgstr " Homepage"
 msgid "HOME_NEWS_TITRE"
 msgstr "Dernières nouvelles"
 msgid "HOME_NEWS_MORE"
-msgstr "Autres actualités"
+msgstr "Voir les autres actualités"
+msgid "HOME_NEWS_NEXT"
+msgstr "Lire la suite de l'article"
 msgid "HOME_ACTIVITY_TITRE"
 msgstr "Activité au hasard"
 msgid "HOME_ACTIVITY_MORE"
-msgstr "Autres activités"
+msgstr "Voir les autres activités"
+msgid "HOME_ACTIVITY_NEXT"
+msgstr "Lire la suite de l'article"
 msgid ""
 msgstr " News"
 msgid "NEWS_LIST_TITLE"
@@ -296,7 +306,7 @@ msgstr "Tous les champs marqués d'un * sont obligatoires."
 msgid "CONTACT_FORM_SUBMIT"
 msgstr "Faire une demande de réservation"
 msgid "CONTACT_ENVOI_MAIL_MAIL"
-msgstr "aroybase@hotmail.fr"
+msgstr "contact@gite-luchon.com"
 msgid "CONTACT_ENVOI_MAIL_SUJET"
 msgstr "[Gite-luchon.com] Nouvelle demande de réservation"
 msgid "CONTACT_ENVOI_MAIL_ALT"
