Correction formatage Date

--- a/data/locales/fr_FR.csv
+++ b/data/locales/fr_FR.csv
@@ -92,6 +92,7 @@ GLOBAL_DATEPICKER_CURRENT;Aujourd'hui
 GLOBAL_DATEPICKER_WEEK;Semaine
 GLOBAL_DATEPICKER_FORMAT;dd/mm/yy
 GLOBAL_DATEPICKER_FIRSTDAY;1
+GLOBAL_TIME_SEPARATOR_LABEL;à
 
 ; Homepage
 HOME_NEWS_TITRE;Dernières nouvelles
