--- a/data/locales/fr_FR/LC_MESSAGES/application.po
+++ b/data/locales/fr_FR/LC_MESSAGES/application.po
@@ -1,391 +1,556 @@
 msgid ""
 msgstr ""
-"Content-Type: text/plain; charset=UTF-8"
-msgid ""
-msgstr " Erreurs"
+"Project-Id-Version: \n"
+"POT-Creation-Date: \n"
+"PO-Revision-Date: \n"
+"Last-Translator: Alec <aroybase@hotmail.fr>\n"
+"Language-Team: \n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=iso-8859-1\n"
+"Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 1.5.4\n"
+
 msgid "ERROR_EXCEPTION_SITE_UNKNOWN"
 msgstr "Le site que vous essayez d'atteindre n'existe pas."
+
 msgid "ERROR_EXCEPTION_INVALIDARGUMENT"
 msgstr "ERREUR TECHNIQUE : L'entity n'est pas correcte"
+
 msgid "ERROR_EXCEPTION_INVALIDARGUMENT_DAL_ROW_PROPERTYNAME"
-msgstr "La propriÃ©tÃ© demandÃ©e n'existe pas"
+msgstr "La propriété demandée n'existe pas"
+
 msgid "ERROR_DB_CONNECTION"
-msgstr "Erreur lors de la connexion Ã  la base de donnÃ©es"
+msgstr "Erreur lors de la connexion à la base de données"
+
 msgid "ERROR_404_TITLE"
 msgstr "Oops !"
+
 msgid "ERROR_404_CONTENT"
-msgstr "Oops ! La page souhaitÃ©e n'existe pas =/"
-msgid ""
-msgstr " Head"
+msgstr "Oops ! La page souhaitée n'existe pas =/"
+
 msgid "HEAD_TITLE_HOME"
 msgstr "Accueil"
+
 msgid "HEAD_TITLE_PARTNERS"
 msgstr "Partenaires"
+
 msgid "HEAD_TITLE_CONNECTION"
 msgstr "Connexion"
+
 msgid "HEAD_TITLE_NEWS"
-msgstr "ActualitÃ©s"
+msgstr "Actualités"
+
 msgid "HEAD_TITLE_ACTIVITY"
-msgstr "ActivitÃ©s"
+msgstr "Activités"
+
 msgid "HEAD_TITLE_ERROR"
 msgstr "ERREUR"
-msgid ""
-msgstr " Menu"
+
 msgid "GLOBAL_MENU_HOME"
 msgstr "Accueil"
+
 msgid "GLOBAL_MENU_CHAMBRES"
-msgstr "Chambres d'hÃ´tes"
+msgstr "Chambres d'hôtes"
+
 msgid "GLOBAL_MENU_GITE"
 msgstr "Chalet de montagne"
+
 msgid "GLOBAL_MENU_NEWS"
-msgstr "ActualitÃ©s"
+msgstr "Actualités"
+
 msgid "GLOBAL_MENU_ACTIVITIES"
-msgstr "ActivitÃ©s"
+msgstr "Activités"
+
 msgid "GLOBAL_MENU_CONTACT"
 msgstr "Reservations"
+
 msgid "GLOBAL_MENU_PARTNERS"
 msgstr "Partenaires"
-msgid ""
-msgstr " Global"
+
 msgid "GLOBAL_HEADER_TITLE"
 msgstr "Luchon Location Vacances"
+
 msgid "GLOBAL_OUI"
 msgstr "Oui"
+
 msgid "GLOBAL_NON"
 msgstr "Non"
+
 msgid "GLOBAL_AUCUNE"
 msgstr "Aucune"
+
 msgid "GLOBAL_FORM_ENVOYER"
 msgstr "Envoyer"
+
 msgid "GLOBAL_FORM_CONFIRMER"
 msgstr "Confirmer"
+
 msgid "GLOBAL_FORM_VALIDER"
 msgstr "Valider"
+
 msgid "GLOBAL_FORM_SUBMIT"
 msgstr "Enregistrer"
+
 msgid "GLOBAL_FORM_SUBMIT_QUIT"
 msgstr "Enregistrer & quitter"
+
 msgid "GLOBAL_COORDONNEES_ADRESSE"
 msgstr "Adresse : 28, avenue de Gascogne - 31 110 Saint Mamet"
+
 msgid "GLOBAL_COORDONNEES_TELEPHONE_LABEL"
-msgstr "TÃ©l."
+msgstr "Tél."
+
 msgid "GLOBAL_COORDONNEES_TELEPHONE"
 msgstr "+33(0) 561 891 353"
+
 msgid "GLOBAL_COORDONNEES_MOBILE_LABEL"
 msgstr "Mob."
+
 msgid "GLOBAL_COORDONNEES_MOBILE"
 msgstr "+33(0) 618 641 429"
+
 msgid "GLOBAL_BACK"
-msgstr "Retourner Ã  la liste"
+msgstr "Retourner à la liste"
+
 msgid "GLOBAL_BACK_HOME"
-msgstr "Retourner Ã  l'accueil"
+msgstr "Retourner à l'accueil"
+
 msgid "GLOBAL_CHAMP_OBLIGATOIRE"
 msgstr "*"
-msgid ""
-msgstr " Footer"
+
 msgid "FOOTER_COPYRIGHT"
-msgstr "Tous droits reservÃ©sÂ© 2008"
+msgstr "Tous droits reservés© 2008"
+
 msgid "FOOTER_CREDITS"
-msgstr "RÃ©alisation : <a href=\"http://www.aroy.fr\">Alexandre ROY</a>"
-msgid ""
-msgstr " Dates"
+msgstr "Réalisation : <a href=\"http://www.aroy.fr\">Alexandre ROY</a>"
+
 msgid "GLOBAL_MONTH_LABEL01"
 msgstr "Janvier"
+
 msgid "GLOBAL_MONTH_LABEL02"
-msgstr "FÃ©vrier"
+msgstr "Février"
+
 msgid "GLOBAL_MONTH_LABEL03"
 msgstr "Mars"
+
 msgid "GLOBAL_MONTH_LABEL04"
 msgstr "Avril"
+
 msgid "GLOBAL_MONTH_LABEL05"
 msgstr "Mai"
+
 msgid "GLOBAL_MONTH_LABEL06"
 msgstr "Juin"
+
 msgid "GLOBAL_MONTH_LABEL07"
 msgstr "Juillet"
+
 msgid "GLOBAL_MONTH_LABEL08"
-msgstr "AoÃ»t"
+msgstr "Août"
+
 msgid "GLOBAL_MONTH_LABEL09"
 msgstr "Septembre"
+
 msgid "GLOBAL_MONTH_LABEL10"
 msgstr "Octobre"
+
 msgid "GLOBAL_MONTH_LABEL11"
 msgstr "Novembre"
+
 msgid "GLOBAL_MONTH_LABEL12"
-msgstr "DÃ©cembre"
+msgstr "Décembre"
+
 msgid "GLOBAL_MONTH_LABEL_SHORT01"
 msgstr "Jan"
+
 msgid "GLOBAL_MONTH_LABEL_SHORT02"
-msgstr "FÃ©v"
+msgstr "Fév"
+
 msgid "GLOBAL_MONTH_LABEL_SHORT03"
 msgstr "Mars"
+
 msgid "GLOBAL_MONTH_LABEL_SHORT04"
 msgstr "Avr"
+
 msgid "GLOBAL_MONTH_LABEL_SHORT05"
 msgstr "Mai"
+
 msgid "GLOBAL_MONTH_LABEL_SHORT06"
 msgstr "Juin"
+
 msgid "GLOBAL_MONTH_LABEL_SHORT07"
 msgstr "Juil"
+
 msgid "GLOBAL_MONTH_LABEL_SHORT08"
-msgstr "AoÃ»t"
+msgstr "Août"
+
 msgid "GLOBAL_MONTH_LABEL_SHORT09"
 msgstr "Sept"
+
 msgid "GLOBAL_MONTH_LABEL_SHORT10"
 msgstr "Oct"
+
 msgid "GLOBAL_MONTH_LABEL_SHORT11"
 msgstr "Nov"
+
 msgid "GLOBAL_MONTH_LABEL_SHORT12"
-msgstr "DÃ©c"
+msgstr "Déc"
+
 msgid "GLOBAL_DAY_LABEL0"
 msgstr "Dimanche"
+
 msgid "GLOBAL_DAY_LABEL1"
 msgstr "Lundi"
+
 msgid "GLOBAL_DAY_LABEL2"
 msgstr "Mardi"
+
 msgid "GLOBAL_DAY_LABEL3"
 msgstr "Mercredi"
+
 msgid "GLOBAL_DAY_LABEL4"
 msgstr "Jeudi"
+
 msgid "GLOBAL_DAY_LABEL5"
 msgstr "Vendredi"
+
 msgid "GLOBAL_DAY_LABEL6"
 msgstr "Samedi"
+
 msgid "GLOBAL_DAY_LABEL_SHORT0"
 msgstr "Di"
+
 msgid "GLOBAL_DAY_LABEL_SHORT1"
 msgstr "Lu"
+
 msgid "GLOBAL_DAY_LABEL_SHORT2"
 msgstr "Ma"
+
 msgid "GLOBAL_DAY_LABEL_SHORT3"
 msgstr "Me"
+
 msgid "GLOBAL_DAY_LABEL_SHORT4"
 msgstr "Je"
+
 msgid "GLOBAL_DAY_LABEL_SHORT5"
 msgstr "Ve"
+
 msgid "GLOBAL_DAY_LABEL_SHORT6"
 msgstr "Sa"
+
 msgid "GLOBAL_DATEPICKER_CLOSETEXT"
 msgstr "Terminer"
+
 msgid "GLOBAL_DATEPICKER_PREVIOUS"
-msgstr "PrÃ©cÃ©dent"
+msgstr "Précédent"
+
 msgid "GLOBAL_DATEPICKER_NEXT"
 msgstr "Suivant"
+
 msgid "GLOBAL_DATEPICKER_CURRENT"
 msgstr "Aujourd'hui"
+
 msgid "GLOBAL_DATEPICKER_WEEK"
 msgstr "Semaine"
+
 msgid "GLOBAL_DATEPICKER_FORMAT"
 msgstr "dd/mm/yy"
+
 msgid "GLOBAL_DATEPICKER_FIRSTDAY"
 msgstr "1"
-msgid ""
-msgstr " Homepage"
+
+msgid "GLOBAL_TIME_SEPARATOR_LABEL"
+msgstr "à"
+
 msgid "HOME_NEWS_TITRE"
-msgstr "DerniÃ¨res nouvelles"
+msgstr "Dernières nouvelles"
+
 msgid "HOME_NEWS_MORE"
-msgstr "Voir les autres actualitÃ©s"
+msgstr "Voir les autres actualités"
+
 msgid "HOME_NEWS_NEXT"
 msgstr "Lire la suite de l'article"
+
 msgid "HOME_ACTIVITY_TITRE"
-msgstr "ActivitÃ© au hasard"
+msgstr "Activité au hasard"
+
 msgid "HOME_ACTIVITY_MORE"
-msgstr "Voir les autres activitÃ©s"
+msgstr "Voir les autres activités"
+
 msgid "HOME_ACTIVITY_NEXT"
 msgstr "Lire la suite de l'article"
-msgid ""
-msgstr " News"
+
 msgid "NEWS_LIST_TITLE"
-msgstr "ActualitÃ©s"
+msgstr "Actualités"
+
 msgid "NEWS_LIST_TITRE"
 msgstr "Titre"
+
 msgid "NEWS_EDIT_TABS_CONTENT"
 msgstr "Contenus"
+
 msgid "NEWS_EDIT_TABS_PICTURES"
 msgstr "Illustrations"
+
 msgid "NEWS_LIST_CATEGORIE"
-msgstr "CatÃ©gorie"
+msgstr "Catégorie"
+
 msgid "NEWS_LIST_ONLINE"
 msgstr "En ligne ?"
+
 msgid "NEWS_EDIT_TITLE"
-msgstr "Ã‰dition de news"
+msgstr "Édition de news"
+
 msgid "NEWS_CATEGORY_LABEL"
-msgstr "CatÃ©gorie"
+msgstr "Catégorie"
+
 msgid "NEWS_EDIT_TITLE_LABEL"
 msgstr "Titre"
+
 msgid "NEWS_EDIT_CONTENT_LABEL"
 msgstr "Contenu"
+
 msgid "NEWS_EDIT_LINK_LABEL"
 msgstr "Lien"
+
 msgid "NEWS_EDIT_LOCATION_LABEL"
-msgstr "CoordonnÃ©es GPS"
+msgstr "Coordonnées GPS"
+
 msgid "NEWS_ELEMENT_ILLUSTRATION"
 msgstr "Galerie photo"
+
 msgid "NEWS_LIST_NORESULT"
-msgstr "Il n'y a aucune actualitÃ©"
-msgid ""
-msgstr " ActivitÃ©s"
+msgstr "Il n'y a aucune actualité"
+
 msgid "ACTIVITY_LIST_TITLE"
-msgstr "ActivitÃ©s"
+msgstr "Activités"
+
 msgid "ACTIVITY_LIST_TITRE"
 msgstr "Titre"
+
 msgid "ACTIVITY_EDIT_TABS_CONTENT"
 msgstr "Contenus"
+
 msgid "ACTIVITY_EDIT_TABS_PICTURES"
 msgstr "Illustrations"
+
 msgid "ACTIVITY_LIST_CATEGORIE"
-msgstr "CatÃ©gorie"
+msgstr "Catégorie"
+
 msgid "ACTIVITY_LIST_ONLINE"
 msgstr "En ligne ?"
+
 msgid "ACTIVITY_EDIT_TITLE"
-msgstr "Ã‰dition de l'activitÃ©"
+msgstr "Édition de l'activité"
+
 msgid "ACTIVITY_CATEGORY_LABEL"
-msgstr "CatÃ©gorie"
+msgstr "Catégorie"
+
 msgid "ACTIVITY_EDIT_TITLE_LABEL"
 msgstr "Titre"
+
 msgid "ACTIVITY_EDIT_CONTENT_LABEL"
 msgstr "Contenu"
+
 msgid "ACTIVITY_EDIT_LINK_LABEL"
 msgstr "Lien"
+
 msgid "ACTIVITY_EDIT_LOCATION_LABEL"
-msgstr "CoordonnÃ©es GPS"
+msgstr "Coordonnées GPS"
+
 msgid "ACTIVITY_ELEMENT_ILLUSTRATION"
 msgstr "Galerie photo"
+
 msgid "ACTIVITY_LIST_NORESULT"
-msgstr "Il n'y a aucune activitÃ©"
-msgid ""
-msgstr "Contact"
+msgstr "Il n'y a aucune activité"
+
 msgid "CONTACT_TITLE"
-msgstr "RÃ©server / Nous contacter"
+msgstr "Réserver / Nous contacter"
+
 msgid "HEAD_TITLE_CONTACT"
-msgstr "RÃ©servation / Contact"
+msgstr "Réservation / Contact"
+
 msgid "CONTACT_MAP_TITLE"
 msgstr "Nous localiser"
+
 msgid "CONTACT_FORM_FIELDSET_INFORMATIONS"
-msgstr "Ã€ propos de vous"
+msgstr "À propos de vous"
+
 msgid "CONTACT_FORM_LABEL_NOM"
 msgstr "Nom"
+
 msgid "CONTACT_FORM_LABEL_PRENOM"
-msgstr "PrÃ©nom"
+msgstr "Prénom"
+
 msgid "CONTACT_FORM_LABEL_EMAIL"
 msgstr "E-mail"
+
 msgid "CONTACT_FORM_LABEL_TELEPHONE"
-msgstr "TÃ©l./Mob."
+msgstr "Tél./Mob."
+
 msgid "CONTACT_FORM_LABEL_ADRESSE"
-msgstr "Adresse complÃ¨te"
+msgstr "Adresse complète"
+
 msgid "CONTACT_FORM_FIELDSET_DEMANDE"
-msgstr "Ã€ propos de votre demande"
+msgstr "À propos de votre demande"
+
 msgid "CONTACT_FORM_LABEL_DECOUVERTE"
-msgstr "Comment nous avez vous dÃ©couvert ?"
+msgstr "Comment nous avez vous découvert ?"
+
 msgid "CONTACT_FORM_SELECT_DECOUVERTE_OPTION_VIDE"
 msgstr " ---"
+
 msgid "CONTACT_FORM_SELECT_DECOUVERTE_OPTION_SE"
 msgstr "Moteur de recherche"
+
 msgid "CONTACT_FORM_SELECT_DECOUVERTE_OPTION_ABRITEL"
 msgstr "Abritel"
+
 msgid "CONTACT_FORM_SELECT_DECOUVERTE_OPTION_BOUCHEOREILLE"
-msgstr "Bouche Ã  oreille"
+msgstr "Bouche à oreille"
+
 msgid "CONTACT_FORM_SELECT_DECOUVERTE_OPTION_AUTRES"
 msgstr "Autrement"
+
 msgid "CONTACT_FORM_LABEL_ADULTES"
 msgstr "Nombre d'adultes"
+
 msgid "CONTACT_FORM_LABEL_ENFANTS"
 msgstr "Nombre d'enfants"
+
 msgid "CONTACT_FORM_LABEL_ARRIVEE"
-msgstr "Date arrivÃ©e souhaitÃ©e"
+msgstr "Date arrivée souhaitée"
+
 msgid "CONTACT_FORM_LABEL_DEPART"
-msgstr "Date dÃ©part souhaitÃ©e"
+msgstr "Date départ souhaitée"
+
 msgid "CONTACT_FORM_LABEL_LOCATIONS"
-msgstr "Location(s) souhaitÃ©e(s)"
+msgstr "Location(s) souhaitée(s)"
+
 msgid "CONTACT_FORM_LABEL_PRECISIONS"
-msgstr "Souhaitez vous apporter des prÃ©cisions ?"
+msgstr "Souhaitez vous apporter des précisions ?"
+
 msgid "CONTACT_ENVOI_MAIL_MESSAGE_SUCCES"
-msgstr "Votre message nous a bien Ã©tÃ© envoyÃ©. Nous y rÃ©pondrons dans les meilleurs dÃ©lais."
+msgstr ""
+"Votre message nous a bien été envoyé. Nous y répondrons dans les meilleurs "
+"délais."
+
 msgid "CONTACT_ENVOI_MAIL_MESSAGE_OBLIGATOIRE"
-msgstr "Tous les champs marquÃ©s d'un * sont obligatoires."
+msgstr "Tous les champs marqués d'un * sont obligatoires."
+
 msgid "CONTACT_FORM_SUBMIT"
-msgstr "Faire une demande de rÃ©servation"
+msgstr "Faire une demande de réservation"
+
 msgid "CONTACT_ENVOI_MAIL_MAIL"
 msgstr "contact@gite-luchon.com"
+
 msgid "CONTACT_ENVOI_MAIL_SUJET"
-msgstr "[Gite-luchon.com] Nouvelle demande de rÃ©servation"
+msgstr "[Gite-luchon.com] Nouvelle demande de réservation"
+
 msgid "CONTACT_ENVOI_MAIL_ALT"
-msgstr "Pour afficher ce message, vous devez utiliser un client compatible HTML"
-msgid ""
-msgstr "â€¢â€¢â€¢â€¢â€¢â€¢â€¢â€¢â€¢â€¢â€¢â€¢ ADMINISTRATION â€¢â€¢â€¢â€¢â€¢â€¢â€¢â€¢â€¢â€¢â€¢â€¢"
-msgid ""
-msgstr " Global Admin"
+msgstr ""
+"Pour afficher ce message, vous devez utiliser un client compatible HTML"
+
 msgid "GLOBAL_ADMIN_ADD"
-msgstr "Ajouter un Ã©lÃ©ment"
+msgstr "Ajouter un élément"
+
 msgid "GLOBAL_ADMIN_UPDATE"
-msgstr "Modifier un Ã©lÃ©ment"
+msgstr "Modifier un élément"
+
 msgid "GLOBAL_ADMIN_DELETE"
-msgstr "Supprimer un Ã©lÃ©ment"
+msgstr "Supprimer un élément"
+
 msgid "GLOBAL_ADMIN_DELETE_CONFIRM"
-msgstr "ÃŠtes-vous sÃ»r de vouloir supprimer cet Ã©lÃ©ment ?"
+msgstr "Êtes-vous sûr de vouloir supprimer cet élément ?"
+
 msgid "GLOBAL_ADMIN_UP"
-msgstr "Remonter l'Ã©lÃ©ment"
+msgstr "Remonter l'élément"
+
 msgid "GLOBAL_ADMIN_DOWN"
-msgstr "Descendre l'Ã©lÃ©ment"
+msgstr "Descendre l'élément"
+
 msgid "GLOBAL_ADMIN_ONLINE"
 msgstr "Mettre en ligne"
+
 msgid "GLOBAL_ADMIN_OFFLINE"
 msgstr "Mettre hors ligne"
+
 msgid "GLOBAL_ADMIN_LIST_APERCU"
-msgstr "AperÃ§u"
+msgstr "Aperçu"
+
 msgid "GLOBAL_ADMIN_LIST_DATE_AJOUT"
-msgstr "AjoutÃ© le"
+msgstr "Ajouté le"
+
 msgid "GLOBAL_ADMIN_LIST_DATE_MODIFICATION"
-msgstr "ModifiÃ© le"
+msgstr "Modifié le"
+
 msgid "GLOBAL_ADMIN_LIST_DATE_SUPPRESSION"
-msgstr "SupprimÃ© le"
+msgstr "Supprimé le"
+
 msgid "GLOBAL_ADMIN_LIST_ACTIONS"
 msgstr "Actions"
+
 msgid "GLOBAL_LANGUAGETOGGLER_LABEL"
-msgstr "Changer la langue d'Ã©dition"
+msgstr "Changer la langue d'édition"
+
 msgid "GLOBAL_MODAL_DELETE_TEXT"
-msgstr "Vous Ãªtes sur le point de supprimer un Ã©lÃ©ment. Confirmez vous cette suppression ?"
+msgstr ""
+"Vous êtes sur le point de supprimer un élément. Confirmez vous cette "
+"suppression ?"
+
 msgid "GLOBAL_MODAL_DELETE_CONFIRM"
 msgstr "Confirmer"
+
 msgid "GLOBAL_MODAL_DELETE_CANCEL"
 msgstr "Annuler"
-msgid ""
-msgstr " Menu Admin"
+
 msgid "GLOBAL_MENU_CARROUSEL"
 msgstr "Carrousel"
+
 msgid "HEAD_TITLE_CARROUSEL"
 msgstr "Carrousel"
+
 msgid "GLOBAL_MENU_DECONNEXION"
-msgstr "Se dÃ©connecter"
-msgid ""
-msgstr " Homepage Admin"
+msgstr "Se déconnecter"
+
 msgid "HOME_LOGIN_TITLE"
-msgstr "Connexion Ã  l'interface d'administration"
+msgstr "Connexion à l'interface d'administration"
+
 msgid "HOME_LOGIN_FORM_LOGIN_LABEL"
 msgstr "Identifiant"
+
 msgid "HOME_LOGIN_FORM_PASSWORD_LABEL"
 msgstr "Mot de passe"
+
 msgid "HOME_LOGIN_FORM_SUBMIT_LABEL"
 msgstr "Se connecter"
+
 msgid "HOME_PAGECMS_HOME_TITLE"
-msgstr "Ã‰dition de la page d'accueil"
+msgstr "Édition de la page d'accueil"
+
 msgid "HOME_PAGECMS_PARTNERS_TITLE"
-msgstr "Ã‰dition de la page partenaires"
+msgstr "Édition de la page partenaires"
+
 msgid "HOME_PAGECMS_EDIT_TITLE_LABEL"
 msgstr "Titre"
+
 msgid "HOME_PAGECMS_EDIT_CONTENT_LABEL"
 msgstr "Contenu"
-msgid ""
-msgstr " Carrousel Admin"
+
 msgid "HOME_CARROUSEL_TITLE"
-msgstr "Ã‰dition des images du carrousel"
+msgstr "Édition des images du carrousel"
+
 msgid "HOME_CARROUSEL_FILE_LABEL"
 msgstr "Nouveau fichier"
+
 msgid "HOME_CARROUSEL_LIST_ID"
 msgstr "#"
+
 msgid "HOME_CARROUSEL_LIST_ORIGINALFILENAME"
 msgstr "Nom du fichier"
+
 msgid "HOME_CARROUSEL_LIST_TYPE"
 msgstr "Type"
+
 msgid "HOME_CARROUSEL_LIST_ONLINE"
 msgstr "En ligne ?"
