Locations terminées côté front, reste administration

--- a/data/locales/fr_FR.csv
+++ b/data/locales/fr_FR.csv
@@ -38,13 +38,16 @@ GLOBAL_COORDONNEES_TELEPHONE_LABEL;Tél.
 GLOBAL_COORDONNEES_TELEPHONE;+33(0) 561 891 353
 GLOBAL_COORDONNEES_MOBILE_LABEL;Mob.
 GLOBAL_COORDONNEES_MOBILE;+33(0) 618 641 429
+GLOBAL_COORDONNEES_GPS_LABEL;Coordonnées GPS
 GLOBAL_BACK;Retourner à la liste
 GLOBAL_BACK_HOME;Retourner à l'accueil
 GLOBAL_CHAMP_OBLIGATOIRE;*
+GLOBAL_MONNAIE;euros
 
 ; Footer
 FOOTER_COPYRIGHT;Tous droits reservés© 2008
-FOOTER_CREDITS;Réalisation : <a href="http://www.aroy.fr">Alexandre ROY</a>
+FOOTER_CREDITS;Réalisation :
+FOOTER_PARTENAIRES;Partenaires
 
 ; Dates
 GLOBAL_MONTH_LABEL01;Janvier
@@ -93,6 +96,7 @@ GLOBAL_DATEPICKER_WEEK;Semaine
 GLOBAL_DATEPICKER_FORMAT;dd/mm/yy
 GLOBAL_DATEPICKER_FIRSTDAY;1
 GLOBAL_TIME_SEPARATOR_LABEL;à
+GLOBAL_WEEK_LABEL_SHORT;Sem.
 
 ; Homepage
 HOME_NEWS_TITRE;Dernières nouvelles
@@ -134,6 +138,28 @@ ACTIVITY_EDIT_LOCATION_LABEL;Coordonnées GPS
 ACTIVITY_ELEMENT_ILLUSTRATION;Galerie photo
 ACTIVITY_LIST_NORESULT;Il n'y a aucune activité
 
+;Produits
+PRODUCTS_ONGLET_CONTENT;Description
+PRODUCTS_ONGLET_PHOTOS;Photos
+PRODUCTS_ONGLET_PRIX;Disponibilités & tarifs
+PRODUCTS_ONGLET_RESERVER;Reservation
+PRODUCTS_PRIX_DISPO;Disponibilités
+PRODUCTS_PRIX_PRIX;Tarifs
+PRODUCTS_PRIX_CALENDRIER;Tarifs et calendrier des saisons
+PRODUCT_PRICE_SEASON_CONTACT_US;Contactez nous pour plus d'informations
+PRODUCT_PRICE_NIGHT_EMPTY;&times;"
+PRODUCT_PRICE_NIGHT_NUIT_SING;nuit
+PRODUCT_PRICE_NIGHT_NUIT_PLUR;nuits
+PRODUCT_PRICE_NIGHT_PERSONNES_1;1 personne
+PRODUCT_PRICE_NIGHT_PERSONNES_2;2 personnes
+PRODUCT_PRICE_NIGHT_PERSONNES_3;3 personnes
+PRODUCT_PRICE_NIGHT_PERSONNES_4;4 personnes
+PRODUCT_PRICE_SEASON_EMPTY;&times;"
+PRODUCT_PRICE_SEASON_PERIODES_WEEK;Semaine
+PRODUCT_PRICE_SEASON_PERIODES_WEEKEND;Week-end
+PRODUCT_PRICE_SEASON_PERIODES_MIDWEEK;Mid-week
+PRODUCT_PRICE_SEASON_PERIODES_INDISPO;Réservation ou tarif indisponible
+
 ;Contact
 CONTACT_TITLE;Réserver / Nous contacter
 HEAD_TITLE_CONTACT;Réservation / Contact
@@ -163,7 +189,13 @@ CONTACT_FORM_SUBMIT;Faire une demande de réservation
 CONTACT_ENVOI_MAIL_MAIL;contact@gite-luchon.com
 CONTACT_ENVOI_MAIL_SUJET;[Gite-luchon.com] Nouvelle demande de réservation
 CONTACT_ENVOI_MAIL_ALT;Pour afficher ce message, vous devez utiliser un client compatible HTML
+CONTACT_CATEGORY_TYPE1;Chambres d'hôtes
+CONTACT_CATEGORY_TYPE2;Chalet de montagne / Gîte
+CONTACT_CENTER_COORDINATES_LAT;42.814166
+CONTACT_CENTER_COORDINATES_LONG;0.55444
 
+;Partenaires
+HEAD_TITLE_PARTNERS;Partenaires
 
 
 ;•••••••••••• ADMINISTRATION ••••••••••••;inutile de traduire
