Produits : Contenu + illustration Reste tarifs et dispo
Reste Goldbook Front et Back

--- a/data/locales/fr_FR.csv
+++ b/data/locales/fr_FR.csv
@@ -154,6 +154,7 @@ PRODUCTS_CATEGORY_LIST_TITLE;Catégories
 PRODUCTS_PRODUCT_LIST_TITLE;Produits
 PRODUCTS_LIST_TYPE;Type
 PRODUCTS_LIST_TITRE;Titre
+PRODUCTS_LIST_DESCRIPTION;Description
 PRODUCTS_LIST_CATEGORIE;Catégorie
 PRODUCTS_LIST_CATEGORIE_PRICINGTYPE;Type de tarification
 PRODUCTS_LIST_CATEGORIE_PRICINGTYPE1;A la nuitée
@@ -169,6 +170,9 @@ PRODUCTS_LIST_CATEGORIE_PINCOLOR_BLUE;Bleu
 PRODUCTS_LIST_CATEGORIE_PINCOLOR_GREEN;Vert
 PRODUCTS_LIST_CATEGORIE_PINCOLOR_PURPLE;Violet
 PRODUCTS_LIST_CATEGORIE_PINCOLOR_YELLOW;Jaune
+PRODUCTS_EDIT_PRODUCT_TITLE;Éditer la location
+PRODUCTS_EDIT_TABS_PRICES;Disponibilités & tarifs
+PRODUCTS_LIST_INTRO;Introduction
 
 
 PRODUCTS_ONGLET_CONTENT;Description
