--- a/data/locales/fr_FR.csv
+++ b/data/locales/fr_FR.csv
@@ -171,9 +171,16 @@ PRODUCTS_LIST_CATEGORIE_PINCOLOR_GREEN;Vert
 PRODUCTS_LIST_CATEGORIE_PINCOLOR_PURPLE;Violet
 PRODUCTS_LIST_CATEGORIE_PINCOLOR_YELLOW;Jaune
 PRODUCTS_EDIT_PRODUCT_TITLE;Éditer la location
-PRODUCTS_EDIT_TABS_PRICES;Disponibilités & tarifs
 PRODUCTS_LIST_INTRO;Introduction
-
+PRODUCTS_EDIT_TABS_PRICES;Disponibilités & tarifs
+PRODUCTS_EDIT_PRICE_DISPO;Code HTML des disponibilités
+PRODUCTS_EDIT_PRICE_NUIT1;1 personne/nuit
+PRODUCTS_EDIT_PRICE_NUIT2;2 personnes/nuit
+PRODUCTS_EDIT_PRICE_NUIT3;3 personnes/nuit
+PRODUCTS_EDIT_PRICE_NUIT4;4 personnes/nuit
+PRODUCTS_EDIT_PRICE_SAISON_SEMAINE;Semaine
+PRODUCTS_EDIT_PRICE_SAISON_WEEKEND;Week-end
+PRODUCTS_EDIT_PRICE_SAISON_MIDWEEK;Mid-week
 
 PRODUCTS_ONGLET_CONTENT;Description
 PRODUCTS_ONGLET_PHOTOS;Photos
