--- a/data/locales/fr_FR.csv
+++ b/data/locales/fr_FR.csv
@@ -21,6 +21,7 @@ HEAD_TITLE_ERROR;ERREUR
 HEAD_TITLE_CARROUSEL;Carrousel
 HEAD_TITLE_CONTACT;Réservation / Contact
 HEAD_TITLE_SEASON;Gestion des saisons
+HEAD_TITLE_PRODUCTS;Produits
 
 ; Menu
 GLOBAL_MENU_HOME;Accueil
@@ -164,6 +165,8 @@ PRODUCTS_LIST_CATEGORIE_PRICINGTYPE2;A la saison
 PRODUCTS_EDIT_CATEGORIE_TITLE;Édition de la catégorie
 PRODUCTS_EDIT_TABS_CONTENT;Contenus
 PRODUCTS_EDIT_TABS_PICTURES;Illustrations
+PRODUCTS_EDIT_TABS_GOLDBOOK;Messages du Livre d'or publics
+PRODUCTS_EDIT_TABS_GOLDBOOK_AVALIDER;Messages du Livre d'or à valider
 PRODUCTS_LIST_CATEGORIE_ROUTE;URL de la catégorie
 PRODUCTS_LIST_CATEGORIE_COORDONNEES;Coordonnées GPS
 PRODUCTS_LIST_CATEGORIE_PINCOLOR;Couleur du repère sur GoogleMap
@@ -190,6 +193,7 @@ PRODUCTS_ONGLET_PRIX;Disponibilités & tarifs
 PRODUCTS_ONGLET_RESERVER;Reservation
 PRODUCTS_PRIX_DISPO;Disponibilités
 PRODUCTS_PRIX_PRIX;Tarifs
+PRODUCTS_ONGLET_GOLDBOOK;Livre d'or
 PRODUCTS_PRIX_CALENDRIER;Tarifs et calendrier des saisons
 PRODUCT_PRICE_SEASON_CONTACT_US;Contactez nous pour plus d'informations
 PRODUCT_PRICE_NIGHT_EMPTY;&times;"
@@ -204,6 +208,17 @@ PRODUCT_PRICE_SEASON_PERIODES_WEEK;Semaine
 PRODUCT_PRICE_SEASON_PERIODES_WEEKEND;Week-end
 PRODUCT_PRICE_SEASON_PERIODES_MIDWEEK;Mid-week
 PRODUCT_PRICE_SEASON_PERIODES_INDISPO;Réservation ou tarif indisponible
+PRODUCTS_GOLDBOOK_NEW_MESSAGE;Vous avez séjourné ici ? Laissez nous un message !
+PRODUCTS_GOLDBOOK_MESSAGES;Témoignages de nos clients
+PRODUCTS_GOLDBOOK_MESSAGES_DATES;Dates du séjour
+PRODUCTS_GOLDBOOK_MESSAGES_DATES_DU;Du
+PRODUCTS_GOLDBOOK_MESSAGES_DATES_AU;au
+PRODUCTS_GOLDBOOK_MESSAGES_MESSAGE;Témoignage
+
+GOLDBOOK_FORM_LABEL_CONTENU;Votre message
+GOLDBOOK_FORM_LABEL_DEPART;Date de départ
+GOLDBOOK_FORM_LABEL_ARRIVEE;Date d'arrivée
+GOLDBOOK_FORM_SUBMIT;Laisser un message
 
 ;Contact
 CONTACT_TITLE;Réserver / Nous contacter
